--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>My Portfolio</title>
-</head>
-<body>
-    <nav>navigation</nav>
-    <main>main</main>
-    
-</body>
+  </head>
+  <body>
+    <div class="layout">
+      <nav>navigation</nav>
+      <main>
+        <section class="feature">feature
+        </section>
+
+        <section class="project-list">
+            <div class="project">first project</div>
+            <div class="project">second project</div>
+            <div class="project">third project</div>
+        </section>
+
+
+
+      </main>
+    </div>
+  </body>
 </html>
