--- a/intro-to-react/index.html
+++ b/intro-to-react/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Demo</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="./main.js" type="text/javascript" defer></script>
+    <script type="module" src="./main.jsx" type="text/javascript" defer></script>
 </head>
 
 <body>
     <h1>Hello world</h1>
     <p>Here is some text!</p>
+    <div id="app">React App gets injected here...</div>
 </body>
 
 </html>
